--- a/TODO
+++ b/TODO
@@ -6,17 +6,17 @@ $Id$
 *** Plans for the next release:
 *********************************************************************
 
-** These are the main topics planned for the next release:
+** These are the main topics planned for the next release(s):
 
-- Messages sorting, threading, scoring and searching
 - completion of filtering rules/scoring code
 - subscription management for NNTP/IMAP/newsspool
 - DND with KDE/Gnome filemanagers (now supported by wxGTK)
 - Finish the new message editor code: selections, cut&paste,
-  richt-text editing
+  rich-text editing
 - Templates/style-sheets for message composition and flexible reply
   handling 
 - Windows version release (End of May?)
+- Messages sorting, threading, scoring and searching
 
 ** Possibly that one or the release after that:
  
@@ -24,8 +24,21 @@ $Id$
 - GPG/PGP support?
 - built-in HTML viewer
 
+GENERAL ROADMAP/ORDER OF THINGS:
+
+  1. finish message editor/viewer improvements
+  2. fix remaining bugs in Windows version  ---> make new common release
+  3. finish filtering code
+  4. do multi-threading before adding sorting etc
+
+2/3/4 will happen in parallel as 2 is done by VZ and 3/4 by KB, 4 will 
+happen on a separate cvs branch to avoid breaking the stable release
+code. Some of the minor topics from the list above will happen as they 
+fit in (DND, templates, etc).
+
+
 *********************************************************************
-*** Currently being worked on.:
+*** Currently being worked on:
 ***   (This section is a bit of a mess as it is our day to day
 ***    noticeboard where we list whatever comes to our mind.)
 *********************************************************************
@@ -71,9 +84,18 @@ VZ:
   VZ: can't reproduce this
   KB: only if no other window is open
 
+- foldertreectrl in folder selection dialog should have keyboard focus 
+  and should not open folder when pressed return, but select it :-)
+
+- Would it be possible to set the icon in the treectrl on a per-folder 
+  basis? I'd like to read the iconname from the folder profile, that
+  would allow nice things such as a "trash/junk" folder, etc.
+
+
 ******* Priorities for KB: ******************************
 
 doc: add note about news active file
+
 
 - change main frame icon when new mail in mainframe folder
 - searching in messageview
